# atlan-metabase-app

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.yaml  atlan.yaml  contract_schema.lock.json  main.py  pipeline-map.md  pyproject.toml  renovate.json
.claude/skills/remediate/: SKILL.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/metabase-test-stack/: action.yml
.github/actions/run-conformance-detect/: action.yaml
.github/e2e/: e2e-full-docker-compose.yaml  make-secrets-e2e-full.py
.github/scripts/: build_conformance_args.py  mutation_report.py
.github/sdr-e2e/: app.yaml  make-secrets.py
.github/workflows/: app-deployment-dispatcher.yaml  auto-fix.yml  build-and-publish.yaml  build-image.yaml  checks.yml  code-review-agent.yml  commits.yaml  conformance-upload-sarif.yaml  conformance.yaml  dep-cooldown.yml  e2e-metabase.yaml  generated-freshness.yaml  integration-tests.yaml  mutation-tests.yaml  parity.yaml  platform-smoke-test.yaml  release-gate.yaml  release.yaml  renovate-auto-approve.yml  renovate-pkl-sync.yaml  sdr-integration-tests.yaml  security-review-agent.yml  security-review.yml  stale.yml  stress-test.yaml  tag-and-publish.yaml  tenant-deploy.yaml  tests.yaml  trivy.yaml  unit-tests.yml  update-dashboard.yml  vulnerability-scan.yml
.mothership/: reviewer.yaml
app/: api_types.py  asset_mapper.py  client.py  connector.py  constants.py  contracts.py  credentials.py  errors.py  handler.py  lineage.py  models.py  paths.py  qualified_names.py  residuals.py  run_dev.py  utils.py
app/activities/: metadata_extraction.py  transform.py
app/extracts/: collections.py  dashboards.py  databases.py  filter.py  process.py  questions.py
app/lineage/: ars_builder.py  qi_reader.py
app/templates/: atlan-connectors-metabase.json  workflow.json
app/transformers/: __init__.py  biprocess.yaml  columnprocess.yaml  metabasecollection.yaml  metabasedashboard.yaml  metabasequestion.yaml  process.yaml
app/workflows/: metadata_extraction.py  transform.py
contract/: PklProject  PklProject.deps.json  app.pkl
deploy/: Dockerfile
docs/: conformance-status.md
frontend/static/: script.js  styles.css
frontend/templates/: index.html
tests/: conftest.py
tests/e2e/: README.md  conftest.py  seed_metabase.py  test_e2e_extraction.py  test_e2e_handler.py  test_e2e_lineage.py  test_e2e_personal_collections.py  test_e2e_preflight.py  test_e2e_scale.py  test_metabase_e2e.py
tests/e2e/docker/: test_e2e_handler.py
tests/e2e/fixtures/: seed_metabase_spec.yaml  seed_source.sql
tests/e2e/full_dag/: test_metabase_e2e.py
tests/integration/: conftest.py  test_metabase_integration.py  test_metabase_workflow.py
tests/integration/schema/empty_exclude/raw/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/integration/schema/empty_exclude/transformed/: column.yaml
tests/integration/schema/empty_filters/raw/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/integration/schema/empty_include/raw/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/integration/schema/empty_include/transformed/: schema.yaml  table.yaml
tests/integration/schema/mixed_filters/raw/: column.yaml  database.yaml  schema.yaml  table.yaml
tests/integration/schema/mixed_filters/transformed/: database.yaml
tests/parity/: PARITY_REPORT.md  README.md  api_recorder.py  conftest.py  parity_entities.py  run_parity.py  summarize.py  test_contract_parity.py  test_parity.py  test_performance_parity.py
tests/sdr/: test_metabase_sdr.py
tests/unit/: conftest.py  test_api_types.py  test_asset_mapper.py  test_client.py  test_connector.py  test_constants.py  test_contracts.py  test_credentials.py  test_handler.py  test_lineage_ars.py  test_models.py  test_paths.py  test_qi_reader.py  test_residuals.py  test_utils.py
tests/unit/extracts/: test_collections_extract.py  test_dashboards_extract.py  test_databases_extract.py  test_filter.py  test_process_enrich.py  test_questions_extract.py
tests/unit/transformers/: test_metabase_transformer.py
