[project]
name = "atlan-metabase-app"
version = "1.0.0"
description = "Atlan Metabase App: Built using Atlan Application SDK"
authors = [{ name = "Atlan Apps Team", email = "apps@atlan.com" }]
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "atlan-application-sdk[daft,iam-auth,pandas,tests,workflows]==3.13.2",
    "poethepoet>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "isort>=5.13.2",
    "watchdog>=6.0.0",
    "requests",
    "pyright>=1.1.403",
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.3.3",
    "pytest-timeout>=2.2.0",
    "coverage>=7.6.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.2.1",
]

[tool.poe.tasks]
# Regenerate contract artifacts from contract/app.pkl into app/generated/.
generate = "bash -c 'cd contract && pkl eval -m generated app.pkl && mkdir -p ../app/generated && cp generated/*.json generated/_input.py ../app/generated/ && rm -rf generated'"

# Dapr + Temporal local-dev tasks required by `atlan app run`.
start-dapr = "dapr run --enable-api-logging --log-level debug --app-id app --app-port 3000 --scheduler-host-address '' --placement-host-address '' --max-body-size 1024Mi --dapr-http-port 3500 --dapr-grpc-port 50001 --resources-path components"
start-temporal = "temporal server start-dev --db-filename /tmp/temporal.db"
start-deps.shell = "poe start-dapr & poe start-temporal &"
stop-deps.shell = "lsof -ti:3000,3500,7233,50001 | xargs kill -9 2>/dev/null || true"

# Fetch Dapr resource manifests (secretstore, statestore, objectstore, …) from
# the application-sdk repo's components/ directory at the pinned ref. Required
# by `atlan app run` and by every CI workflow that starts the local stack
# (integration-tests, parity, smoke, stress). Matches the atlan-mssql-app v3
# pattern. components/ is gitignored so each environment fetches a fresh copy.
[tool.poe.tasks.download-components]
interpreter = "python"
env = { SDK_VERSION = "v3.12.0" }
shell = """
import os, pathlib, requests

components_dir = pathlib.Path("components")
components_dir.mkdir(exist_ok=True)

headers = {}
if token := os.getenv("GITHUB_TOKEN"):
    headers["Authorization"] = f"Bearer {token}"

api_url = "https://api.github.com/repos/atlanhq/application-sdk/contents/components"
response = requests.get(api_url, params={"ref": os.getenv("SDK_VERSION")}, headers=headers)
response.raise_for_status()

for file_info in response.json():
    if file_info["type"] == "file" and file_info["name"].endswith(".yaml"):
        file_response = requests.get(file_info["download_url"], headers=headers)
        file_response.raise_for_status()
        (components_dir / file_info["name"]).write_text(file_response.text)
        print(f"Downloaded: {file_info['name']}")
"""

[tool.hatch.build.targets.sdist]
include = ["./**/*.py"]

[tool.hatch.build.targets.wheel]
include = ["./**/*.py"]
packages = [
    "app",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
exclude = [
    ".github/**",
    "app/generated/**",
    # Parity suite uses sys.path manipulation in conftest to enable
    # sibling imports (api_recorder, parity_entities, summarize). Pyright
    # can't follow that, so static-check is skipped here. Imports are
    # validated at test-collection time by pytest.
    "tests/parity/**",
]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring a live Metabase server (see tests/e2e/README.md)",
]

[tool.coverage.run]
omit = [
    "tests/**",
    # Auto-generated from contract/app.pkl via the PKL toolkit — no value
    # in testing it (regenerated on every contract change).
    "app/generated/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 85

[tool.uv.sources]
# atlan-application-sdk = { path = "../application-sdk", editable = true }
# atlan-application-sdk = { git = "https://github.com/atlanhq/application-sdk", rev = "326962d9363d5bc267609282c2862b857149ddac" }
