[project]
name = "atlan-metabase-app"
version = "2.0.0"
description = "Atlan Metabase App: Built using Atlan Application SDK"
authors = [{ name = "Atlan Apps Team", email = "apps@atlan.com" }]
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"
dependencies = [
    "atlan-application-sdk[iam-auth,pandas,tests,workflows]>=3.15.1,<4.0.0",
    "poethepoet>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "requests",
    "pyright>=1.1.403",
    "ruff>=0.12.7",
    "atlan-application-sdk-conformance<=1.0.0",
]
test = [
    "pytest>=8.3.3",
    "coverage>=7.6.1",
    "pytest-asyncio>=0.24.0",
    # Fail-fast on hung tests instead of eating the CI budget. Belt-and-
    # suspenders alongside the testcontainer fixture — hangs can still
    # surface inside Temporal / embedded_runtime.
    "pytest-timeout>=2.3.1",
    # Drives the Metabase testcontainer in tests/integration/conftest.py.
    "testcontainers>=4.0.0",
    # httpx is used by conftest's Metabase seed flow (POST /api/setup etc).
    "httpx>=0.27.0",
    # docker SDK powers _docker_available() probe + testcontainers backend.
    "docker>=7.0.0",
]

[tool.poe.tasks]
# Regenerate contract artifacts from contract/app.pkl into app/generated/.
generate = "bash -c 'cd contract && pkl eval -m generated app.pkl && cp -R generated/. .. && rm -rf generated'"

# Dapr + Temporal local-dev tasks required by `atlan app run`.
start-dapr = "dapr run --enable-api-logging --log-level debug --app-id app --app-port 3000 --scheduler-host-address '' --placement-host-address '' --max-body-size 1024Mi --dapr-http-port 3500 --dapr-grpc-port 50001 --resources-path components"
start-temporal = "temporal server start-dev --db-filename /tmp/temporal.db"
start-deps.shell = "poe start-dapr & poe start-temporal &"
stop-deps.shell = "lsof -ti:3000,3500,7233,50001 | xargs kill -9 2>/dev/null || true"

# Fetch Dapr resource manifests (secretstore, statestore, objectstore, …) from
# the application-sdk repo's components/ directory at the pinned ref. Required
# by `atlan app run` and by every CI workflow that starts the local stack
# (integration-tests, e2e). Matches the atlan-mssql-app v3
# pattern. components/ is gitignored so each environment fetches a fresh copy.
[tool.poe.tasks.download-components]
interpreter = "python"
env = { SDK_VERSION = "v3.12.0" }
shell = """
import os, pathlib, requests

components_dir = pathlib.Path("components")
components_dir.mkdir(exist_ok=True)

headers = {}
if token := os.getenv("GITHUB_TOKEN"):
    headers["Authorization"] = f"Bearer {token}"

api_url = "https://api.github.com/repos/atlanhq/application-sdk/contents/components"
response = requests.get(api_url, params={"ref": os.getenv("SDK_VERSION")}, headers=headers)
response.raise_for_status()

for file_info in response.json():
    if file_info["type"] == "file" and file_info["name"].endswith(".yaml"):
        file_response = requests.get(file_info["download_url"], headers=headers)
        file_response.raise_for_status()
        (components_dir / file_info["name"]).write_text(file_response.text)
        print(f"Downloaded: {file_info['name']}")
"""

[tool.hatch.build.targets.sdist]
include = ["./**/*.py"]

[tool.hatch.build.targets.wheel]
include = ["./**/*.py"]
packages = [
    "app",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# Logging-quality rules to prevent regressions of patterns the
# signal-over-noise audit fixed.
# Note: G002 (%-style formatting) is intentionally NOT enabled — the SDK's
# get_logger() adapter bridges %-style to loguru via _format_printf_args,
# making %-style the *correct* pattern in this repo.
select = [
    "G004",   # logging-f-string
    "G003",   # logging-string-concat
    "T201",   # print statement
    "LOG009", # logger.warn deprecated; use logger.warning
]

[tool.ruff.lint.per-file-ignores]
# E2E scripts print human-readable diagnostics — stdout is the intended
# output for these tests / CI helpers; structured logging is unnecessary.
"tests/e2e/**" = ["T201"]
".github/e2e/**" = ["T201"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
exclude = [
    ".github/**",
    "app/generated/**",
]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped default loop so the conftest's session-scoped embedded
# Temporal + worker fixtures share the same loop with per-test async tests.
# Matches atlan-openapi-app/pyproject.toml.
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Per-test timeout. Belt-and-suspenders against hangs inside Temporal /
# embedded_runtime / Metabase HTTP — without this, a hang eats the full
# 60-min CI job budget with no diagnostic. ``thread`` method dumps a
# stack trace on timeout so we can see what was stuck.
#
# Sized to comfortably bound the full e2e DAG: the test class sets
# ``ae_poll_timeout_seconds=1800`` (extract→qi→publish→extract-lineage
# →lineage-publish on the tenant) + ``atlas_poll_timeout_seconds=900``
# (Atlas asset assertions afterward) + ~300s of bootstrap headroom
# (Atlan client init, AE workflow create, seed-version publish, AE
# submit). 3000s total — well under the e2e-full reusable workflow's
# 120-min job timeout-minutes ceiling. The previous 300s killed the
# test mid-extract before the AE poll budget was even close to
# exhausted; unit/integration tests still finish in seconds so the
# bump is a no-op for those.
timeout = 3000
timeout_method = "thread"
markers = [
    "e2e: tenant-hitting end-to-end test (requires ATLAN_BASE_URL + ATLAN_API_KEY)",
]

[tool.coverage.run]
omit = [
    "tests/**",
    # Auto-generated from contract/app.pkl via the PKL toolkit — no value
    # in testing it (regenerated on every contract change).
    "app/generated/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 85

[tool.uv.sources]
# atlan-application-sdk = { path = "../application-sdk", editable = true }
# atlan-application-sdk = { git = "https://github.com/atlanhq/application-sdk", rev = "326962d9363d5bc267609282c2862b857149ddac" }
